<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EwhaTimeTable</string>
    <string name="action_settings">Settings</string>
    
    <string name="accept">적용</string>
    <string name="delete">삭제</string>
    <string name="close">닫기</string>
    
    <!-- home -->
    <string name="drawer01">메인</string>
    <string name="drawer02">강의 검색</string>
    <string name="drawer03">시간표 관리</string>
    <string name="drawer04">학점 계산기</string>
    <string name="drawer05">개발자 정보</string>
    
    <!-- main fragment -->
    <string name="mainFragmentText01">시간표 보기</string>
    <string name="mainFragmentText02">시간표 수정은 =시간표관리=메뉴에서 가능합니다.</string>
    
    <string name="mainFragmentTutorialText">다시보지않기</string>
    
	<!-- search mode -->
    <string name="viewtable">시간표검색</string>
    <string name="timetable">시간표</string>
    <string name="search">검색</string>
    
    <string name="defaultspinner">전체</string>
    <string name="semesterText">학기</string>
    <string name="semesterKind01">정규</string>
    <string name="semesterKind02">계절</string>
    
    <string name="univSpinnerString">단대선택</string>
    <string name="majSpinnerString">전공선택</string>
    <string name="subKindSpinnerString">교과목구분</string>
    <string name="daySpinnerString">요일</string>
    <string name="timeSpinnerString">교시</string>
    <string name="gradeSpinnerString">학점</string>
    
    <string name="subjectKindDetail01">교양선택</string>
    
    <string name="editText01">학수번호</string>
    <string name="editText02">교과목명</string>
    <string name="editText03">담당교수</string>
    <string name="isEnglish">영어강의</string>
    
    <string name="popuptext01">학수번호-분반</string>
    <string name="popuptext02">교과목구분</string>
    <string name="popuptext03">개설학과(학년)</string>
    <string name="popuptext04">학점 / 시간</string>
    <string name="popuptext05">시간 : </string>
    <string name="popuptext06">요일/교시</string>
    <string name="popuptext07">교실</string>
    <string name="popuptext08">영어강의</string>
    <string name="popuptext09">수강제한인원</string>
    <string name="popuptext10">비고</string>
    <string name="popuptext11">교수</string>
    <string name="addTimeTable">시간표에 추가</string>
    
    <string name="err">1개 이상의 조건을 입력해주세요.</string>
    <string name="noresult">조건에 맞는 과목이 없습니다.</string>
    <string name="back_finish">버튼을 한번 더 누르면 앱이 종료됩니다.</string>
    
    <!-- timetable mode -->
    
    <string name="gridFragmentText01">시간표 관리</string>
    
    <string name="gridFragmentTimeText01">"08:00\r\n~\r\n09:15"</string>
    <string name="gridFragmentTimeText02">"09:30\r\n~\r\n10:45"</string>
    <string name="gridFragmentTimeText03">"11:00\r\n~\r\n12:15"</string>
    <string name="gridFragmentTimeText04">"12:30\r\n~\r\n13:45"</string>
    <string name="gridFragmentTimeText05">"14:00\r\n~\r\n15:15"</string>
    <string name="gridFragmentTimeText06">"15:30\r\n~\r\n16:45"</string>
    <string name="gridFragmentTimeText07">"17:00\r\n~\r\n18:15"</string>
    <string name="gridFragmentTimeText08">"18:30\r\n~\r\n19:45"</string>
    
    <string name="overlayClass">해당 시간에 이미 과목이 등록되어있습니다</string>
    <string name="deleteClassText01">과목을 삭제하시겠습니까?</string>
    <string name="deleteClassText02">과목이 삭제되었습니다.</string>

    <string name="gridFragmentPopupText01">과목명을 입력해주세요.</string>
    <string name="gridFragmentPopupText02">장소를 입력해주세요.</string>
    <string name="gridFragmentPopupText03">과목을 추가할 수 없는 시간입니다.</string>
    <string name="gridFragmentPopupText04">과목명을 입력해주세요.</string>
    
    <!-- calculate mode -->
    
    <string name="calculateFragmentButtonText01">계산</string>
    
    <string name="calculateFragmentResultText">학점 : </string>
</resources>
